[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/moral_choice_controller.gd" id="1"]

[node name="MoralChoiceScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.04, 0.03, 0.05, 1.0)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 48

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="ChoiceTitleLabel" type="Label" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "A Moral Dilemma"
horizontal_alignment = 1

[node name="Sep" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="NarrativeLabel" type="Label" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
autowrap_mode = 2
text = "Narrative text..."
horizontal_alignment = 1

[node name="Sep2" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="OptionABtn" type="Button" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Option A [Radiant +3]"

[node name="OptionBBtn" type="Button" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Option B [Vile +3]"

[node name="OptionCBtn" type="Button" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Option C [Primal +3]"

[node name="ResultLabel" type="Label" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
autowrap_mode = 2
text = ""
horizontal_alignment = 1
visible = false

[node name="ChoiceContinueBtn" type="Button" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Continue"
visible = false
